Fixed overflow, added cmoy content

--- a/src/components/readItComponents/Posts/Post/Post.css
+++ b/src/components/readItComponents/Posts/Post/Post.css
@@ -17,7 +17,7 @@
     overflow: scroll;
     text-decoration: none;
     color: white;
-    height: 57.5vh;
+
 
 
 
